Fixed issue with header, resizing fonts on smaller devices, introduced mobile-fist approach

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -87,15 +87,15 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 6em;
+  font-size: 3em;
   /*font-size: 7.4vw;*/
-  margin-top: 200px;
+  margin-top: 100px;
   margin-bottom: 20px;
 }
 
 h2 {
   text-align: center;
-  font-size: 2.6em;
+  font-size: 1.6em;
   /*font-size: 3.2vw;*/
   color: #888888;
   font-family: 'Open Sans', sans-serif;
@@ -172,11 +172,11 @@ ul, ol, dl {
 }
 
 .header{
-  height: 600px;
   background-color: #fffffa;
   box-sizing: border-box;
   padding: 20px;
   box-shadow: 0 1px 5px rgba(0,0,0,.2);
+
 }
 
 .header a {
@@ -300,6 +300,7 @@ Full-Width Styles
   position: relative;
   margin: 0 auto;
   max-width: 740px;
+  padding: 0 20px;
 }
 
 .footer {
@@ -329,9 +330,23 @@ Full-Width Styles
 
 
 /*******************************************************************************
-Small Device Styles
+Media Queries - mobile first approach
 *******************************************************************************/
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
 
+}
+
+@media screen and (min-width:768px) {
+    .header h1 {
+        font-size: 7em;
+        margin-top: 200px;
+    }
+
+    .header h2 {
+        font-size: 2.6em;
+    }
+
+
+    .right-list {}
 }
